--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<html>
 	<head>
 		<title>Quick Learners Classroom</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<link rel="stylesheet" type="text/css" href="styleec.css">
 		<style type="text/css">
 			@media screen and (max-width:650px) {
@@ -73,7 +75,8 @@
 		
 	<p>	Manas Gawade : +91 8296440341<br>
 		Varnika Daroji : +91 9480053795<br>
-		Instagram:<br>
+		<i class="fa fa-instagram" style="font-size:48px;"></i>
+
 		@manas_gawade<br>
 	    @mis.stranger<br>
 	</p>
