--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@
 		
 	<p>	Manas Gawade : +91 8296440341<br>
 		Varnika Daroji : +91 9480053795<br>
-		<i class="fa fa-instagram" style="font-size:48px;"></i>
-<br><br>
-		@manas_gawade<br>
-	    @mis.stranger<br>
+		<table>
+        <tr>
+          <td><i class="fa fa-instagram" style="font-size:48px;"></i></td>
+          <td>@manas_gawade</td>
+        </tr>
+        <tr>
+          <td><i class="fa fa-instagram" style="font-size:48px;"></i></td>
+          <td>@mis.stranger</td>
+        </tr>
+      </table>
+
 	</p>
 
 
