--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 		Varnika Daroji : +91 9480053795<br>
 		<table>
         <tr>
-          <td><i class="fa fa-instagram" style="font-size:48px;"></i></td>
+          <td><i class="fa fa-instagram" style="font-size:48px;font-weight:normal;"></i></td>
           <td>@manas_gawade</td>
         </tr>
         <tr>
-          <td><i class="fa fa-instagram" style="font-size:48px;"></i></td>
+          <td><i class="fa fa-instagram" style="font-size:48px;font-weight:normal;"></i></td>
           <td>@mis.stranger</td>
         </tr>
       </table>
